--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-Great-Stone-of-Sardis_6127
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Stockton, Frank Richard
@@ -12,6 +15,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/221
     wikipedia: http://en.wikipedia.org/wiki/Frank_R._Stockton
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/6127#The-Great-Stone-of-Sardis
 gutenberg_issued: '2004-07-01'
 gutenberg_type: Text
 identifiers:
